--- a/client/connection-wwan0.service
+++ b/client/connection-wwan0.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Service de gestion de connexion pour wwan
-After=network.target
+#After=network.target
+After=connection-bonding.service
 
 [Service]
 Restart=always
